# ChangeLog for app-crypt/johntheripper
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-crypt/johntheripper/ChangeLog,v 1.70 2007/11/11 14:57:05 drac Exp $

  11 Nov 2007; Samuli Suominen <drac@gentoo.org>
  johntheripper-1.7.2-r2.ebuild:
  amd64 stable wrt #198659

  11 Nov 2007; Dawid Węgliński <cla@gentoo.org>
  johntheripper-1.7.2-r2.ebuild:
  Finally stable on x86 (bug #198659)

  11 Nov 2007; Alon Bar-Lev <alonbl@gentoo.org>
  johntheripper-1.7.2-r2.ebuild:
  Reapply sandbox patch, can reproduce this

  11 Nov 2007; Alon Bar-Lev <alonbl@gentoo.org>
  johntheripper-1.7.2-r2.ebuild:
  Remove the mkdir hack for now

  10 Nov 2007; Ferris McCormick <fmccor@gentoo.org>
  johntheripper-1.7.2-r2.ebuild:
  Sparc stable, bug #198659.

  10 Nov 2007; Markus Rothe <corsair@gentoo.org>
  johntheripper-1.7.2-r2.ebuild:
  Stable on ppc64; bug #198659

  10 Nov 2007; Alon Bar-Lev <alonbl@gentoo.org>
  +files/johntheripper-1.7.2-mkdir-sandbox.patch,
  johntheripper-1.7.2-r2.ebuild:
  Fix access denied for sandbox, bug#198659

  10 Nov 2007; Dawid Węgliński <cla@gentoo.org>
  johntheripper-1.7.2-r2.ebuild:
  Reverting back to ~x86

  10 Nov 2007; Dawid Węgliński <cla@gentoo.org>
  johntheripper-1.7.2-r2.ebuild:
  Stable on x86 (bug #198659)

  10 Nov 2007; nixnut <nixnut@gentoo.org> johntheripper-1.7.2-r2.ebuild:
  Stable on ppc wrt bug 198659

  04 Nov 2007; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing myself as the maintainer.

*johntheripper-1.7.2-r2 (01 Aug 2007)

  01 Aug 2007; Alon Bar-Lev <alonbl@gentoo.org>
  -johntheripper-1.7.2-r1.ebuild, +johntheripper-1.7.2-r2.ebuild:
  Place lists at correct location, bug#187320, thanks to Paul Taylor

  20 Jul 2007; Alon Bar-Lev <alonbl@gentoo.org>
  johntheripper-1.7.2-r1.ebuild:
  Strip flags, as upstream requested

  19 Jul 2007; Alon Bar-Lev <alonbl@gentoo.org>
  johntheripper-1.7.2-r1.ebuild:
  ebuild cleanups, I think this is better shape
