@@ -5,6 +5,6 @@ AUX johntheripper-1.7.2-stackdef.S.patch 1845 RMD160 947aa7be3186c13f87b35e2bbd1
 AUX johntheripper-1.7.2-stripping.patch 840 RMD160 9001329b0fcda4ed244c746cdd6dc2d5bde9ae94 SHA1 e60f41af985f12a431b9c272e3964d166d552782 SHA256 e2b989facd64aa1634de13df5a76c3c5579ad90d75a4af63f68b5ad970eca0b8
 DIST john-1.7.2-all-7.diff.gz 64450 RMD160 c0adeb226ee75bbc9a875b93a622b99927fb825f SHA1 a0b25e3f9606b5839a4f1a59f896727f0195ba9a SHA256 fb2f42d12ec94be02ad398ac9e823190e518cefcb096a4197c6a37d83d29124c
 DIST john-1.7.2.tar.gz 809308 RMD160 8ab90216401cf5cda7ba50a8bb88f53678e35eac SHA1 c3c4720c2f1446a3349b0307a0522af574d013e4 SHA256 9a94d2417b13d49cb11aeb11186933fe0e0491904987ca47c88bf5710935c3cb
-EBUILD johntheripper-1.7.2-r2.ebuild 3470 RMD160 10565a3058d163afc6d72625571ae944895bad38 SHA1 5884dd42e7a97c473c8ca46b1e305a046df3ed63 SHA256 c70e8473f3bdf460faf361a3adb616234d7db0e531c2bc542fdcf0c474a2d060
-MISC ChangeLog 12257 RMD160 bdfa7a51055b676ab7aeb43bad11e6439a14ff87 SHA1 0fbd9b208e07266a36cec3023601a4e8d62a2ffb SHA256 801238152e1b365af7faa3d30cc1788e6073c27b8a19775129843d861cac94e1
+EBUILD johntheripper-1.7.2-r2.ebuild 3516 RMD160 e21ca313b3769040404b1e0c05d35993d4a0fd39 SHA1 3f5c1c6a9316ef5f928a03180207e384f06f2ace SHA256 4de29b8b4c65a1f95b51537ff67488db895b8d38bade262ade250f9f15e29d8e
+MISC ChangeLog 12659 RMD160 5d22dda44d840cf1ccc093a7ab4e37d973a13c3b SHA1 c8ebee254f3e14ee81da566ff68cacf90fefc92c SHA256 67551d424deec1feb24464d59357e9e2c8a65a2a614d7fbe41b95f16dcab47bc
 MISC metadata.xml 160 RMD160 61ea9f9370afee3db802f40f7c6b2edd2f5347cf SHA1 51cf29a3589cff823294704e225b0de18f65e6dd SHA256 7419f4e73ddd07284403525f1380824fc68280cad69e2dfae0645ad52b33ef10
