@@ -1,6 +1,16 @@
 # ChangeLog for app-crypt/johntheripper
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-crypt/johntheripper/ChangeLog,v 1.70 2007/11/11 14:57:05 drac Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-crypt/johntheripper/ChangeLog,v 1.72 2007/11/13 20:13:26 alonbl Exp $
+
+  13 Nov 2007; Alon Bar-Lev <alonbl@gentoo.org>
+  -files/johntheripper-1.7.2-funroll-loops.patch,
+  johntheripper-1.7.2-r2.ebuild:
+  Remove funroll-loops patch, do this using argument to make
+
+  13 Nov 2007; Jeroen Roovers <jer@gentoo.org>
+  +files/johntheripper-1.7.2-funroll-loops.patch,
+  johntheripper-1.7.2-r2.ebuild:
+  Stable for HPPA (bug #198659). Add (trivial) funroll-loops removal patch.
 
   11 Nov 2007; Samuli Suominen <drac@gentoo.org>
   johntheripper-1.7.2-r2.ebuild:
